Force CGO, always enable pdsql plugin & sqlite

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -71,3 +71,9 @@ whoami:whoami
 on:github.com/coredns/caddy/onevent
 sign:sign
 view:view
+
+pdsql:github.com/voltagex-forks/coredns-pdsql
+#pdsql_sqlite:github.com/jinzhu/gorm/dialects/sqlite
+#pdsql_sqlite:github.com/go-gorm/sqlite
+pdsql_sqlite:gorm.io/driver/sqlite
+
