--- a/plugin.cfg
+++ b/plugin.cfg
@@ -54,11 +54,11 @@ minimal:minimal
 template:template
 transfer:transfer
 hosts:hosts
-route53:route53
-azure:azure
-clouddns:clouddns
-k8s_external:k8s_external
-kubernetes:kubernetes
+#route53:route53
+#azure:azure
+#clouddns:clouddns
+#k8s_external:k8s_external
+#kubernetes:kubernetes
 file:file
 auto:auto
 secondary:secondary
